# captcha-ai-solver

./: .gitignore  CHANGELOG.md  README.md  captcha_solver.py  demo_extract_and_replicate.py  demo_workflow.py  example.py  example_usage.py  main.py  project.md  proxies.txt  pyproject.toml  test.py  test_captcha_demo.py  test_captcha_fixed.py  test_extractor.py
captcha_solver/: __init__.py  captcha_extractor.py  captcha_replicator.py  captcha_solver.py  challenge_solver.py  hosts_manager.py  replicated_captcha.py  replicated_captcha_solver.py  token_applier.py  token_submitter.py
examples/: basic_solve.py  complete_solve.py  complete_solve_lnnte.py
misc/: captcha_extractor.py  token_submitter.py
misc/examples/: complete_solve_lnnte.py
tests/: conftest.py  test_captcha_solver.py
use_cases/: validate_lnnte.py
